src/CParser.java
// Generated from /Users/deebakkarthi/.local/src/kcc/lexer/src/C.g4 by ANTLR 4.12.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, COMMENT=2, AUTO=3, BREAK=4, CASE=5, CHAR=6, CONST=7, CONTINUE=8, 
		DEFAULT=9, DO=10, DOUBLE=11, ELSE=12, ENUM=13, EXTERN=14, FLOAT=15, FOR=16, 
		GOTO=17, IF=18, INT=19, LONG=20, REGISTER=21, RETURN=22, SHORT=23, SIGNED=24, 
		SIZEOF=25, STATIC=26, STRUCT=27, SWITCH=28, TYPEDEF=29, UNION=30, UNSIGNED=31, 
		VOID=32, VOLATILE=33, WHILE=34, IDENTIFIER=35, CONSTANT=36, STRING_LITERAL=37, 
		ELLIPSIS=38, RIGHT_ASSIGN=39, LEFT_ASSIGN=40, ADD_ASSIGN=41, SUB_ASSIGN=42, 
		MUL_ASSIGN=43, DIV_ASSIGN=44, MOD_ASSIGN=45, AND_ASSIGN=46, XOR_ASSIGN=47, 
		OR_ASSIGN=48, RIGHT_OP=49, LEFT_OP=50, INC_OP=51, DEC_OP=52, PTR_OP=53, 
		AND_OP=54, OR_OP=55, LE_OP=56, GE_OP=57, EQ_OP=58, NE_OP=59, SCOLON=60, 
		LBRACE=61, RBRACE=62, COMMA=63, COLON=64, ASSIGN=65, LPAREN=66, RPAREN=67, 
		LBRACKET=68, RBRACKET=69, DOT=70, AMPERSAND=71, NOT_OP=72, BITNOT=73, 
		MINUS=74, PLUS=75, ASTERISK=76, DIV=77, MOD=78, LT_OP=79, GT_OP=80, XOR_OP=81, 
		BITOR=82, QUESTION=83, WS=84;
	public static final int
		RULE_primary_expression = 0, RULE_postfix_expression = 1, RULE_argument_expression_list = 2, 
		RULE_unary_expression = 3, RULE_unary_operator = 4, RULE_cast_expression = 5, 
		RULE_multiplicative_expression = 6, RULE_addictive_expression = 7, RULE_shift_expression = 8, 
		RULE_relational_expression = 9, RULE_equality_expression = 10, RULE_bit_and_expression = 11, 
		RULE_xor_expression = 12, RULE_bit_or_expression = 13, RULE_logical_and_expression = 14, 
		RULE_logical_or_expression = 15, RULE_conditional_expression = 16, RULE_assignment_expression = 17, 
		RULE_assignment_operator = 18, RULE_expression = 19, RULE_constant_expression = 20, 
		RULE_declaration = 21, RULE_declaration_specifiers = 22, RULE_declaration_specifier = 23, 
		RULE_init_declaration_list = 24, RULE_init_declarator = 25, RULE_storage_class_specifier = 26, 
		RULE_type_specifier = 27, RULE_struct_or_union_specifier = 28, RULE_struct_or_union = 29, 
		RULE_struct_declaration_list = 30, RULE_struct_declaration = 31, RULE_specifier_qualifier_list = 32, 
		RULE_struct_declarator_list = 33, RULE_struct_declarator = 34, RULE_enum_specifier = 35, 
		RULE_enumerator_list = 36, RULE_enumerator = 37, RULE_type_qualifier = 38, 
		RULE_declarator = 39, RULE_direct_declarator = 40, RULE_pointer = 41, 
		RULE_type_qualifier_list = 42, RULE_parameter_type_list = 43, RULE_parameter_list = 44, 
		RULE_parameter_declaration = 45, RULE_identifier_list = 46, RULE_type_name = 47, 
		RULE_abstract_declarator = 48, RULE_direct_abstract_declarator = 49, RULE_initializer = 50, 
		RULE_initializer_list = 51, RULE_statement = 52, RULE_labeled_statement = 53, 
		RULE_compound_statement = 54, RULE_declaration_list = 55, RULE_statement_list = 56, 
		RULE_expression_statement = 57, RULE_selection_statement = 58, RULE_iteration_statement = 59, 
		RULE_jump_statement = 60, RULE_translation_unit = 61, RULE_external_declaration = 62, 
		RULE_function_definition = 63;
	private static String[] makeRuleNames() {
		return new String[] {
			"primary_expression", "postfix_expression", "argument_expression_list", 
			"unary_expression", "unary_operator", "cast_expression", "multiplicative_expression", 
			"addictive_expression", "shift_expression", "relational_expression", 
			"equality_expression", "bit_and_expression", "xor_expression", "bit_or_expression", 
			"logical_and_expression", "logical_or_expression", "conditional_expression", 
			"assignment_expression", "assignment_operator", "expression", "constant_expression", 
			"declaration", "declaration_specifiers", "declaration_specifier", "init_declaration_list", 
			"init_declarator", "storage_class_specifier", "type_specifier", "struct_or_union_specifier", 
			"struct_or_union", "struct_declaration_list", "struct_declaration", "specifier_qualifier_list", 
			"struct_declarator_list", "struct_declarator", "enum_specifier", "enumerator_list", 
			"enumerator", "type_qualifier", "declarator", "direct_declarator", "pointer", 
			"type_qualifier_list", "parameter_type_list", "parameter_list", "parameter_declaration", 
			"identifier_list", "type_name", "abstract_declarator", "direct_abstract_declarator", 
			"initializer", "initializer_list", "statement", "labeled_statement", 
			"compound_statement", "declaration_list", "statement_list", "expression_statement", 
			"selection_statement", "iteration_statement", "jump_statement", "translation_unit", 
			"external_declaration", "function_definition"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", null, "'auto'", "'break'", "'case'", "'char'", "'const'", 
			"'continue'", "'default'", "'do'", "'double'", "'else'", "'enum'", "'extern'", 
			"'float'", "'for'", "'goto'", "'if'", "'int'", "'long'", "'register'", 
			"'return'", "'short'", "'signed'", "'sizeof'", "'static'", "'struct'", 
			"'switch'", "'typedef'", "'union'", "'unsigned'", "'void'", "'volatile'", 
			"'while'", null, null, null, "'...'", "'>>='", "'<<='", "'+='", "'-='", 
			"'*='", "'/='", "'%='", "'&='", "'^='", "'|='", "'>>'", "'<<'", "'++'", 
			"'--'", "'->'", "'&&'", "'||'", "'<='", "'>='", "'=='", "'!='", "';'", 
			"'{'", "'}'", "','", "' :'", "'='", "'('", "')'", "'['", "']'", "'.'", 
			"'&'", "'!'", "'~'", "'-'", "'+'", "'*'", "'/'", "'%'", "'<'", "'>'", 
			"'^'", "'|'", "'?'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "COMMENT", "AUTO", "BREAK", "CASE", "CHAR", "CONST", "CONTINUE", 
			"DEFAULT", "DO", "DOUBLE", "ELSE", "ENUM", "EXTERN", "FLOAT", "FOR", 
			"GOTO", "IF", "INT", "LONG", "REGISTER", "RETURN", "SHORT", "SIGNED", 
			"SIZEOF", "STATIC", "STRUCT", "SWITCH", "TYPEDEF", "UNION", "UNSIGNED", 
			"VOID", "VOLATILE", "WHILE", "IDENTIFIER", "CONSTANT", "STRING_LITERAL", 
			"ELLIPSIS", "RIGHT_ASSIGN", "LEFT_ASSIGN", "ADD_ASSIGN", "SUB_ASSIGN", 
			"MUL_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "AND_ASSIGN", "XOR_ASSIGN", 
			"OR_ASSIGN", "RIGHT_OP", "LEFT_OP", "INC_OP", "DEC_OP", "PTR_OP", "AND_OP", 
			"OR_OP", "LE_OP", "GE_OP", "EQ_OP", "NE_OP", "SCOLON", "LBRACE", "RBRACE", 
			"COMMA", "COLON", "ASSIGN", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
			"DOT", "AMPERSAND", "NOT_OP", "BITNOT", "MINUS", "PLUS", "ASTERISK", 
			"DIV", "MOD", "LT_OP", "GT_OP", "XOR_OP", "BITOR", "QUESTION", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "C.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Primary_expressionContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(CParser.IDENTIFIER, 0); }
		public TerminalNode CONSTANT() { return getToken(CParser.CONSTANT, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(CParser.STRING_LITERAL, 0); }
		public TerminalNode LPAREN() { return getToken(CParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(CParser.RPAREN, 0); }
		public Primary_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primary_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterPrimary_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitPrimary_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CVisitor ) return ((CVisitor<? extends T>)visitor).visitPrimary_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Primary_expressionContext primary_expression() throws RecognitionException {
		Primary_expressionContext _localctx = new Primary_expressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_primary_expression);
		try {
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				match(IDENTIFIER);
				}
				break;
			case CONSTANT:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				match(CONSTANT);
				}
				break;
			case STRING_LITERAL:
				enterOuterAlt(_localctx, 3);
				{
				setState(130);
				match(STRING_LITERAL);
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 4);
				{
				setState(131);
				match(LPAREN);
				setState(132);
				expression();
				setState(133);
				match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Postfix_expressionContext extends ParserRuleContext {
		public Primary_expressionContext primary_expression() {
			return getRuleContext(Primary_expressionContext.class,0);
		}
		public List<TerminalNode> LBRACKET() { return getTokens(CParser.LBRACKET); }
		public TerminalNode LBRACKET(int i) {
			return getToken(CParser.LBRACKET, i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> RBRACKET() { return getTokens(CParser.RBRACKET); }
		public TerminalNode RBRACKET(int i) {
			return getToken(CParser.RBRACKET, i);
		}
		public List<TerminalNode> LPAREN() { return getTokens(CParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(CParser.LPAREN, i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(CParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(CParser.RPAREN, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(CParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(CParser.IDENTIFIER, i);
		}
		public List<TerminalNode> INC_OP() { return getTokens(CParser.INC_OP); }
		public TerminalNode INC_OP(int i) {
			return getToken(CParser.INC_OP, i);
		}
		public List<TerminalNode> DEC_OP() { return getTokens(CParser.DEC_OP); }
		public TerminalNode DEC_OP(int i) {
			return getToken(CParser.DEC_OP, i);
		}
		public List<TerminalNode> DOT() { return getTokens(CParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(CParser.DOT, i);
		}
		public List<TerminalNode> PTR_OP() { return getTokens(CParser.PTR_OP); }
		public TerminalNode PTR_OP(int i) {
			return getToken(CParser.PTR_OP, i);
		}
		public List<Argument_expression_listContext> argument_expression_list() {
			return getRuleContexts(Argument_expression_listContext.class);
		}
		public Argument_expression_listContext argument_expression_list(int i) {
			return getRuleContext(Argument_expression_listContext.class,i);
		}
		public Postfix_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_postfix_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterPostfix_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitPostfix_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CVisitor ) return ((CVisitor<? extends T>)visitor).visitPostfix_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Postfix_expressionContext postfix_expression() throws RecognitionException {
		Postfix_expressionContext _localctx = new Postfix_expressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_postfix_expression);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			primary_expression();
			setState(153);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(151);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case LBRACKET:
						{
						setState(138);
						match(LBRACKET);
						setState(139);
						expression();
						setState(140);
						match(RBRACKET);
						}
						break;
					case LPAREN:
						{
						setState(142);
						match(LPAREN);
						setState(144);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (((((_la - 25)) & ~0x3f) == 0 && ((1L << (_la - 25)) & 4435430107782145L) != 0)) {
							{
							setState(143);
							argument_expression_list();
							}
						}

						setState(146);
						match(RPAREN);
						}
						break;
					case PTR_OP:
					case DOT:
						{
						setState(147);
						_la = _input.LA(1);
						if ( !(_la==PTR_OP || _la==DOT) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(148);
						match(IDENTIFIER);
						}
						break;
					case INC_OP:
						{
						setState(149);
						match(INC_OP);
						}
						break;
					case DEC_OP:
						{
						setState(150);
						match(DEC_OP);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(155);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Argument_expression_listContext extends ParserRuleContext {
		public List<Assignment_expressionContext> assignment_expression() {
			return getRuleContexts(Assignment_expressionContext.class);
		}
		public Assignment_expressionContext assignment_expression(int i) {
			return getRuleContext(Assignment_expressionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CParser.COMMA, i);
		}
		public Argument_expression_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument_expression_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).enterArgument_expression_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CListener ) ((CListener)listener).exitArgument_expression_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CVisitor ) return ((CVisitor<? extends T>)visitor).visitArgument_expression_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Argument_expression_listContext argument_expression_list() throws RecognitionException {
		Argument_expression_listContext _localctx = new Argument_expression_listContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_argument_expression_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			assignment_expression();
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(157);
				match(COMMA);
				setState(158);
				assignment_expression();
				}
				}
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
